--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,8 +23,8 @@ services:
       - ${DEBUG_PORT}:${DEBUG_PORT}
     environment:
       SPRING_APPLICATION_JSON: '{
-          "spring.data.mongodb.uri": "mongodb://admin:password@mongodb:27017/test",
-          "spring.data.mongodb.authentication-database":"admin",
+          "spring.data.mongodb.uri": "mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:${MONGO_DOCKER_PORT}/${MONGO_INITDB_DATABASE}?authSource=${MONGO_INITDB_ROOT_USERNAME}",
+          "spring.data.mongodb.authentication-database":"${MONGO_INITDB_ROOT_USERNAME}",
           "jwt.expiration": "${JWT_EXPIRATION_TIME}",
           "jwt.secret": "${JWT_SECRET}",
           "server.servlet.context-path": "/api"
