--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 			<version>3.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.10.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
